src/test/error/import4.lns
import test.error.Sub5;

Sub5.test.func();
let test = new Sub5.Test(); // error
